--- a/prepros.cfg
+++ b/prepros.cfg
@@ -406,17 +406,6 @@
           "height": 0,
           "width": 0
         },
-        "a913f6d4": {
-          "id": "a913f6d4",
-          "path": "questionaire.html",
-          "output": "questionaire.html",
-          "name": "questionaire.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -427,6 +416,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "40d173ba": {
+          "id": "40d173ba",
+          "path": "wp-config.php",
+          "output": "wp-config.php",
+          "name": "wp-config.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
